# gworldclock3

./: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.build  aclocal.m4  config.h  config.h.in  config.status  config.sub  configure  configure.ac  gworldclock.1  gworldclock.c.no_time_t  gworldclock.h  gworldclock.h.no_time_t  gworldclock.sgml  main.c  main.h  manpage.links  misc.c  misc.h  options.c  options.h  prepnotes  rendezvous.c  rendezvous.h  resize.c  resize.h  timer.c  timer.h  todo  tzwatch  tzwatch.1  zones.c  zones.h
m4/: Makefile  Makefile.in
po/: ChangeLog  Makefile  Makefile.in  Makevars  POTFILES  POTFILES.in  gworldclock.pot  ja.gmo  ja.po
